# HSE_Seminars_1_year

./: README.md
lab/: CMakeLists.txt
lab/01_task/: CMakeLists.txt  README.md  main.cpp
lab/02_task/: CMakeLists.txt  README.md  main.cpp
lab/03_task/: CMakeLists.txt  README.md  main.cpp
lab/03_task/include/: benchmark_config.h
lab/03_task/src/: benchmarks.cpp
module_1/: CmakeLists.txt  Seminar_1  Seminar_2  Seminar_2.cpp  lecture_1.cpp  seminar_1.cpp
module_1/seminar_3/: function.h  math_operators.h  task_10_3  task_10_3.cpp  task_1_3  task_1_3.cpp  task_2_3  task_2_3.cpp  task_3_3  task_3_3.cpp  task_4_3  task_4_3.cpp  task_5_3  task_5_3.cpp  task_6_3  task_6_3.cpp  task_7_3  task_7_3.cpp  task_8_3  task_8_3.cpp  task_9_3  task_9_3.cpp
module_1/seminar_4/: task_10_4  task_10_4.cpp  task_11_4  task_11_4.cpp  task_12_4  task_12_4.cpp  task_13_4  task_13_4.cpp  task_14_4  task_14_4.cpp  task_15_4  task_15_4.cpp  task_16_4  task_16_4.cpp  task_1_4  task_1_4.cpp  task_2_4  task_2_4.cpp  task_3_4  task_3_4.cpp  task_4_4  task_4_4.cpp  task_5_4  task_5_4.cpp  task_6_4  task_6_4.cpp  task_7_4.cpp  task_8_4  task_8_4.cpp  task_9_4  task_9_4.cpp
module_1/seminar_5/: task_1_5  task_1_5.cpp  task_2_5  task_2_5.cpp  task_3_5  task_3_5.cpp  task_4_5  task_4_5.cpp  task_5_5  task_5_5.cpp  task_6_5  task_6_5.cpp
module_1/seminar_6/: task_1_6  task_1_6.cpp  task_2_6  task_2_6.cpp  task_3_6  task_3_6.cpp
module_1/seminar_7/: task_1_7  task_1_7.cpp  (+6 more)
module_3/: CMakeLists.txt
module_3/seminar 1/: task 1  task 1.cpp  task 2  task 2.cpp  task 4  task 4.cpp
module_3/seminar2/: task 1  task 1.cpp  task 2  task 2.cpp  task 3.cpp  task 4.cpp
module_3/seminar3/Task06/: CMakeLists.txt  main  main.cpp
module_3/seminar3/Task07/: CMakeLists.txt  main.cpp
module_3/seminar3/Task08/: CMakeLists.txt  main  main.cpp
module_3/seminar4/Task01/: main  main.cpp
module_3/seminar4/Task02/: main  main.cpp
module_3/seminar4/Task03/: main.cpp
module_3/seminar4/Task04/: main  main.cpp
module_3/seminar4/Task05/: main  main.cpp
module_3/seminar4/Task06/: main  main.cpp
module_3/seminar5/task01/: CMakeLists.txt  main.cpp
module_3/seminar5/task01/include/: calculator.h
module_3/seminar5/task02/: CMakeLists.txt  main.cpp
module_3/seminar5/task02/include/: point.h
module_3/seminar5/task02/src/: point.cpp
module_3/seminar6/task1/: CMakeLists.txt  main  main.cpp  task1
module_3/seminar6/task2/: main.cpp  task2
module_3/seminar6/task3/: main.cpp  task3
module_3/seminar6/task4/: main.cpp  task4
module_3/seminar6/task5/: main.cpp  task5
module_3/seminar6/task6/: main  main.cpp
module_3/seminar6/task7/: main.cpp  task7
module_3/seminar6/task8/: main.cpp  task3  task8
module_3/seminar6/task9/: main.cpp  task9
module_3/seminar7/task1/: main.cpp  task1
module_3/seminar7/task10/: main.cpp  task10
module_3/seminar7/task11/: main.cpp  task11
module_3/seminar7/task2/: main.cpp  task2
module_3/seminar7/task3/: main  main.cpp  task3
module_3/seminar7/task4/: main.cpp  task4
module_3/seminar7/task5/: main.cpp  task5
module_3/seminar7/task6/: main.cpp  task6
module_3/seminar7/task7/: main.cpp  task7
module_3/seminar7/task8/: main.cpp  task8
module_3/seminar7/task9/: main.cpp  task9
(+88 files in other folders)
